--- a/_layouts/2020_frontpage.html
+++ b/_layouts/2020_frontpage.html
@@ -5,9 +5,9 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en">
 <head>  
-<title>{{ site.title }}</title>
+<title>{{ page.title }} | {{ site.title }}</title>
 <meta charset="UTF-8">
-<meta name="description" content="Cenky Portfolio Template">
+<meta name="description" content="{{ site.description }}">
 <meta name="keywords" content="personal, portfolio">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
