--- a/_includes/2020_frontpage_body.html
+++ b/_includes/2020_frontpage_body.html
@@ -12,7 +12,7 @@
 <!-- HEADER 
 ==================================================-->
 <header>
-  <a href="index.html" class="logo float-left"><img src="{{ site.url }}/assets/cenky/img/logo.png" alt=""> </a>
+  <a href="{{ site.url }}" class="logo float-left"><img src="{{ site.url }}/assets/cenky/img/logo.png" alt=""> </a>
   <div class="menu float-right"><img src="{{ site.url }}/assets/cenky/img/menu.png" alt=""></div>
 </header>
 
