--- a/_includes/2020_frontpage_body.html
+++ b/_includes/2020_frontpage_body.html
@@ -23,6 +23,7 @@
   <nav>
     <ul>
       <li><a data-type="ajax-load" href="{{ site.url }}">Inicio</a></li>
+      <li><a href="https://anchor.fm/giancarlo-hincapie/?utm_source=giancarlohincapie.com" target="_blank">Podcast</a></li>
     </ul>
   </nav>
   <!-- Social Links -->
