--- a/_includes/2020_frontpage_body.html
+++ b/_includes/2020_frontpage_body.html
@@ -43,7 +43,7 @@
     <div class="ws-bg"></div>
   </div>
   <div class="ws-text">
-    <a data-type="ajax-load" class="slider-text-heading">
+    <a class="slider-text-heading">
       <h2 class="title">Giancarlo Hincapié</h2>
       <span class="number">Consultor &middot; Bartender Élite IBA &middot; Embajador ILC</span>
     </a>
