--- a/_includes/2020_frontpage_head.html
+++ b/_includes/2020_frontpage_head.html
@@ -23,5 +23,5 @@
      <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Teko:500,600&display=swap&subset=latin-ext" rel="stylesheet">
-
+    {% include gtag1.html %}
 </head> 
