--- a/_includes/2020_frontpage_body.html
+++ b/_includes/2020_frontpage_body.html
@@ -57,7 +57,7 @@
     </a>
     <a href="https://ejecocktails.com/?utm_source=giancarlohincapie.com" class="slider-text-heading" target="_blank">
       <h2 class="title">Consultor</h2>
-      <span class="number">Cocktails &amp; Dreams Bar Solutions</span>
+      <span class="number">VGA Jigger &amp; Shaker</span>
     </a>
     <a class="slider-text-heading">
       <h2 class="title">Speaker &amp; Ferias</h2>
